tests/neg/i16601.scala
@main def Test: Any = new concurrent.ExecutionContext  // error